--- a/Modulo 4 - Laboratorio Extra - Funciones y eventos/Hotel/index.html
+++ b/Modulo 4 - Laboratorio Extra - Funciones y eventos/Hotel/index.html
@@ -58,12 +58,12 @@
   </div>
   <div class="result">
     <p id="selectRoom"></p>
-    <p id="spa"></p>
+    <p id="bath"></p>
     <p id="selectBed"></p>
     <p id="countNights"></p>
     <p id="countParking"></p>
     <p id="amount"></p>
-    <p id="priceTotal"></p>
+    <p id="precio"></p>
   </div>
   <script src="./script.js" type="text/javascript"></script>
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
