--- a/Modulo 4 - Laboratorio Extra - Funciones y eventos/Hotel/index.html
+++ b/Modulo 4 - Laboratorio Extra - Funciones y eventos/Hotel/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,6 +10,7 @@
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <title>Modulo 4 - Laboratorio Extra - Funciones y eventos</title>
 </head>
+
 <body>
   <div class="container">
     <div class="row justify-content-center">
@@ -20,35 +22,35 @@
           <div class="card-body">
             <form id="myForm">
               <div class="form-group">
-                <label for="room">Select Room Type</label><br/>
+                <label for="room">Select Room Type</label><br />
                 <select name="room" id="room" class="form-control" required>
                   <option value="" disabled selected>Select Room</option>
-                  <option value="Standard">Standard</option>
-                  <option value="JuniorSuite">Junior Suite</option>
-                  <option value="Suite">Suite</option>
+                  <option value="Standard">Standard (100€)</option>
+                  <option value="JuniorSuite">Junior Suite (120€)</option>
+                  <option value="Suite">Suite (150€)</option>
                 </select>
-              </div><br/>
+              </div><br />
               <div class="form-group">
-                <label for="spa">SPA</label><br/>
+                <label for="spa">SPA</label><br />
                 <input type="radio" name="spa" id="spa" class="form-check-input position-static">
-              </div><br/>
+              </div><br />
               <div class="form-group">
-                <label for="bedType">Select Bed Type</label><br/>
+                <label for="bedType">Select Bed Type</label><br />
                 <select name="bedType" id="bedType" class="form-control" required>
                   <option value="" disabled selected>Select Bed</option>
-                  <option value="Single">Single</option>
+                  <option value="Single">Single (-25%)</option>
                   <option value="Double">Double</option>
-                  <option value="Triple">Triple</option>
+                  <option value="Triple">Triple (+25%)</option>
                 </select>
-              </div><br/>
+              </div><br />
               <div class="form-group">
-                <label for="nights">Hotel nights</label><br/>
+                <label for="nights">Hotel nights</label><br />
                 <input type="number" name="nights" id="nights" class="form-control" required>
-              </div><br/>
+              </div><br />
               <div class="form-group">
-                <label for="parking">Parking nights</label><br/>
+                <label for="parking">Parking nights</label><br />
                 <input type="number" name="parking" id="parking" class="form-control" required>
-              </div><br/>
+              </div><br />
               <input type="submit" class="btn btn-success" id="calculate" value="Calculate">
             </form>
           </div>
@@ -56,19 +58,23 @@
       </div>
     </div>
   </div>
-  <div class="result">
-    <p id="selectRoom"></p>
-    <p id="bath"></p>
-    <p id="selectBed"></p>
-    <p id="countNights"></p>
-    <p id="countParking"></p>
-    <p id="amount"></p>
-    <p id="precio"></p>
+  <div id="result">
+    <p id="selectRoom">Room Type.............................</p>
+    <p id="selectBed">Type of bed............................</p>
+    <p id="countNights">Duration of stay...................</p>
+    <p id="countParking">Parking nights.......................</p>
+    <p id="amount">Discount applied.................</p>
+    <p id="bath">Spa selected..........................</p>
+    <p id="prize">Total Cost............</p>
   </div>
+
   <script src="./script.js" type="text/javascript"></script>
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
-  integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
+    integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous">
+  </script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
-  integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script> 
+    integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous">
+  </script>
 </body>
+
 </html>
