--- a/Modulo 5 - Laboratorio - Arrays/index.html
+++ b/Modulo 5 - Laboratorio - Arrays/index.html
@@ -10,7 +10,17 @@
 <body>
   <button type="button" id="carrito">Cesta</button>
   <button type="button" id="listado">Listado de Productos</button>
-  <table id="tabla"></table>
+  <button type="button" id="borrado">Borrado de Productos</button>
+  <table id="tabla">
+    <thead>
+      <tr>
+        <th>Product</th>
+        <th>Price</th>
+        <th>Count</th>
+        <th>Total</th>
+      </tr>
+    </thead>
+  </table>
 </body>
 <script src="./script.js" type="text/javascript"></script>
 </html>
