--- a/Modulo 5 - Laboratorio - Arrays/index.html
+++ b/Modulo 5 - Laboratorio - Arrays/index.html
@@ -8,9 +8,11 @@
   <title>Modulo 5 - Laboratorio - Arrays</title>
 </head>
 <body>
-  <button type="button" id="carrito">Cesta</button>
-  <button type="button" id="listado">Listado de Productos</button>
-  <button type="button" id="borrado">Borrado de Productos</button>
+  <button type="button" id="carrito">Ejercicio 1</button>
+  <button type="button" id="listado">Ejercicio 2</button>
+  <button type="button" id="borrado">Ejercicio 3</button>
+  <button type="button" id="totalCarrito">Ejercicio 4</button>
+  <button type="button" id="productoPrime">Ejercicio 5</button>
   <table id="tabla">
     <thead>
       <tr>
@@ -20,6 +22,7 @@
         <th>Total</th>
       </tr>
     </thead>
+    <tbody id="tbody"></tbody>
   </table>
 </body>
 <script src="./script.js" type="text/javascript"></script>
