--- a/Modulo 6 - Laboratorio - Algoritmos I/index.html
+++ b/Modulo 6 - Laboratorio - Algoritmos I/index.html
@@ -11,11 +11,11 @@
   <h1>Carrito de la compra</h1>
   <div id="container"></div>
   <div id="result">
-    <p id="Subtotal">Subtotal</p>
-    <p id="iva">IVA</p>
-    <p id="total">TOTAL</p>
+    <p id="Subtotal"></p>
+    <p id="iva"></p>
+    <p id="total"></p>
   </div>
-  <input type="submit" id="button-calculate" value="Calcular">
+  <button type="submit" id="button-calculate" value="Calcular">Calculate</button>
   <script src="./script.js" type="text/javascript"></script>
 </body>
 </html>
