--- a/Modulo 6 - Laboratorio - Algoritmos II/index.html
+++ b/Modulo 6 - Laboratorio - Algoritmos II/index.html
@@ -4,9 +4,22 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="./style.css">
+  <script src="https://code.iconify.design/2/2.2.0/iconify.min.js"></script>
   <title>Modulo 6 - Laboratorio - Algoritmos II</title>
 </head>
 <body>
-  
+  <h2>Enigma</h2>
+  <div class="text">
+    <textarea name="encrypt" id="encrypt" cols="30" rows="10" placeholder="Escribe aqui tu mensaje"></textarea>
+  </div>
+  <div class="btn">
+    <button type="button" id="btnEncrypt"><span class="iconify" data-icon="akar-icons:arrow-down"></span>Encrypt<span class="iconify" data-icon="akar-icons:arrow-down"></span></button>
+    <button type="button" id="btnDecrypt"><span class="iconify" data-icon="ant-design:arrow-up-outlined"></span>Decrypt<span class="iconify" data-icon="ant-design:arrow-up-outlined"></span></button>
+  </div>
+  <div class="text">
+    <textarea name="encrypt" id="decrypt" cols="30" rows="10" placeholder="Escribe aqui tu mensaje"></textarea>
+  </div>
+  <script src="./script.js" type="text/javascript"></script>
 </body>
 </html>
