--- a/Modulo 6 - Laboratorio - Algoritmos II/index.html
+++ b/Modulo 6 - Laboratorio - Algoritmos II/index.html
@@ -21,5 +21,6 @@
     <textarea name="encrypt" id="decrypt" cols="30" rows="10" placeholder="Escribe aqui tu mensaje"></textarea>
   </div>
   <script src="./script.js" type="text/javascript"></script>
+  <script src="./script2.js" type="text/javascript"></script>
 </body>
 </html>
