--- a/Modulo 7 - Laboratorio - Expresiones Regulares/index.html
+++ b/Modulo 7 - Laboratorio - Expresiones Regulares/index.html
@@ -4,8 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  
-  <title>Modulo 6 - Laboratorio - Algoritmos III</title>
+  <title>Modulo 7 - Laboratorio - Expresiones Regulares</title>
 </head>
 <body>
   <script src="./script.js" type="text/javascript"></script>
