--- a/Modulo 11 - Laboratorio - Clases y this/index.html
+++ b/Modulo 11 - Laboratorio - Clases y this/index.html
@@ -4,10 +4,9 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <script src="/index.975ef6c8.js" defer=""></script>
-  <title>Document</title>
+  <title>Modulo 11 - Laboratorio - Clases y this</title>
 </head>
 <body>
-  <div id="root"></div>
+  <script src="./script.js" type="text/javascript"></script>
 </body>
 </html>
